# python-tiktok-poster

./: .env.example  .gitignore  README.md  make.sh  manage.py  pyproject.toml
automationapp/: asgi.py  celery.py  context_processor.py  settings.py  urls.py  wsgi.py
database/seeders/: __init__.py  user_seeder.py
docker/: .env.example  Dockerfile  docker-compose.override.yml.local  docker-compose.override.yml.prod  docker-compose.yml
docker/nginx/vhost/: mydomain.com
scripts/: production_deployment.sh
src/authentication/: signals.py
src/core/: urls.py  utils.py  views.py
src/core/templates/: contact.html  home.html
src/media/: models.py  views.py
src/media/migrations/: 0001_initial.py
src/media/templates/: post_content_form.html  post_content_list.html
src/notification/: urls.py  views.py
src/notification/services/: browser_service.py  email_service.py  slack_service.py
src/notification/value_objects/: push_notification_value_object.py
src/tiktok/: models.py  urls.py  views.py
src/tiktok/services/: tiktok_refresh_token_service.py  tiktok_upload_file_service.py
src/user/: urls.py  views.py
src/user/migrations/: 0001_initial.py
src/user/models/: __init__.py  user.py  user_profile.py
src/user/templates/: delete.html  profile.html
static/css/: base.css
templates/: 400.html  403.html  404.html  500.html  error_base.html
templates/components/elements/: info_alert.html
templates/core/: layout.html
templates/core/components/: cookie_consent.html  desktop_navigation.html  javascript.html  mobile_navigation.html
(+11 files in other folders)
